# char-lm

./: .pre-commit-config.yaml  README.md  pyproject.toml
char_lm/: data.py  model.py  tokenizer.py
notebooks/: cities-eda.ipynb
scripts/: build_dataset.py
tests/: test_char_lm.py  test_tokenizer.py
tests/fixtures/: tiny_corpus.txt
