[tool.poetry]
name = "char-lm"
version = "0.1.0"
description = ""
authors = ["Mateusz Bednarski <mateusz.bednarski@windowslive.com>"]

[tool.poetry.dependencies]
python = "3.8.*"
torch = "1.7.*"
pytorch-lightning = "1.2.*"
pandas = "^1.2.0"
scikit-learn = "^0.24.0"
seaborn = "^0.11.1"
jupyterlab = "^3.0.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
